--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,58 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	margin: 0;
+	padding: 0;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background-color: #0f1524;
+	color: #ffffff;
+}
+
+h1 {
+	font-size: 3rem;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+ul,
+li {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+ul {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	top: 0;
+	/* left: 50%; */
+	/* transform: translateX(-50%); */
+	transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.spinning {
+	transform: translateY(200px);
+}
+
+.container {
+	display: grid;
+	place-content: center;
+	height: 3rem;
+	width: 3rem;
+	border: 1px solid white;
 }
