--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,16 +52,37 @@ ul {
 .slot {
 	display: grid;
 	place-content: center;
-	height: 3rem;
-	width: 3rem;
+	padding: 1rem;
 	border: 1px solid white;
+}
+
+.slot:hover {
+	background-color: red;
 }
 
 .slots {
 	display: flex;
+	font-size: 2rem;
+	justify-content: center;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 form {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+}
+
+button {
+	width: fit-content;
+}
+
+h1 {
+	transition: all 1s;
 }
