--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,16 @@ body {
 	padding: 0;
 	font-family: 'Press Start 2P', system-ui;
 }
-
 * {
 	box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
 }
